--- a/labcourse/react-app/package.json
+++ b/labcourse/react-app/package.json
@@ -3,17 +3,26 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@aws-amplify/analytics": "^5.2.9",
+    "@aws-amplify/interactions": "^4.0.42",
+    "@aws-amplify/storage": "^4.4.25",
+    "@aws-amplify/ui": "^3.10.0",
+    "@aws-amplify/xr": "^3.0.42",
     "@fortawesome/fontawesome-free": "^6.1.1",
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
+    "aws-amplify": "^4.3.24",
     "axios": "^0.21.0",
     "bootstrap": "^5.1.3",
     "bootstrap-css-only": "^4.4.1",
+    "firebase": "^9.8.3",
+    "formik": "^2.2.9",
     "react": "^18.0.0",
     "react-bootstrap": "^2.4.0",
+    "react-datepicker": "^4.8.0",
     "react-dom": "^18.0.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^5.2.0",
